                    Changes made to Pyjamas since 0.7
                    ---------------------------------

 * Added makeCloseable and centring to DialogBox, by Serge Tarkovski 

 * Added default style to CaptionPanel, by Serge Tarkovski 

 * Added log10 to math module

 * Added "glass" opaque background option to PopupPanel, by Serge Tarkovski 

                    Changes made to Pyjamas since 0.6
                    ---------------------------------

 * Added string zfill function, thanks to Angelo Motolla.

 * Added datetime module, thanks to Angelo Motolla.

 * Added issubclass, thanks to Daniel Gerber

 * Off-by-one bug in datetime on months, fixed by Russell Yanofsky

 * Fix for menu highlighting by Pavel Mironchyk

 * Add initial port of python logging module
   Supports logging.StreamHandler (to log to console with print statement) and
   logging.handlers.HTTPHandler (to log to remote webserver)

 * Updated JSONRPC to conform JSON-RPC 1.0/1.1/2.0 and to return
   JSON-RPC 2.0 error dicts ini onRemeoteError (other errors are 
   mapped to JSON-RPC 2.0 format)

 * Enhanced dict initialization: dict(a=1, b=2)

 * Added setFocus function to TextBoxBase to override FocusMixin.setFocus
   because FocusMixin assumes that you called Focus.createFocusable to
   create the input box.

 * Added str.isalpha and str.isupper, thanks to Marcus Brinkmann

 * Modified bootstrap.py: place absolute path in pyjsbuild.bat file to
   reference python.exe direct (thanks to Rich Newpol) closes #324

 * Added FlowPanel demo from jordanwii showing how you have to use
   a span element to Label to get round a CSS IE hack issue

 * added DOM.eventStopPropagation which sets cancelBubble in IE/MSHTML
   and calls stopPropagation everywhere else

 * Added builtin sum() function

 * Added builtin zip() function

 * Added builtin reduce() function

 * Added builtin iter() function

 * Added types set and frozenset

 * Added builtin reversed() function

 * Added fromkeys method to dict
